# ffvoice-engine

./: .clang-format  .clang-tidy  .editorconfig  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PYPI_RELEASE_CHECKLIST.md  README.md  pyproject.toml  server.json  setup.py
.claude/skills/ffvoice-transcription/: SKILL.md  examples.md  reference.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  pr.yml  release.yml
apps/cli/: main.cpp
benchmarks/: CMakeLists.txt  benchmark_audio_conversion.cpp  benchmark_audio_processing.cpp  benchmark_main.cpp
docs/: audio-processing.md  market-research.md  rnnoise.md  webrtc-apm.md  whisper-asr.md
include/ffvoice/: types.h
models/: .gitkeep
python/: IMPLEMENTATION_STATUS.md  README.md
python/docs/: QUICKSTART.md
python/docs/tutorials/: ffvoice_tutorial.ipynb
python/examples/: basic_transcription.py  complete_realtime_pipeline.py  live_captions_demo.py  realtime_transcription.py
python/ffvoice/: __init__.py  _ffvoice.pyi  models.py
python/ffvoice/mcp/: __init__.py  _diarization_pipeline.py  _live_caption_pipeline.py  _pipeline.py  server.py
python/tests/: test_audio_mixer.py  test_basic.py  test_live_captioner.py  test_mcp_tools.py  test_models.py  test_numpy.py  test_ring_buffer.py  test_word_api.py
scripts/: format-check.sh  format.sh  lint.sh
src/audio/: audio_capture_device.cpp  audio_capture_device.h  audio_mixer.cpp  audio_mixer.h  audio_processor.cpp  audio_processor.h  diarizer.cpp  diarizer.h  live_captioner.cpp  live_captioner.h  rnnoise_processor.cpp  rnnoise_processor.h  vad_segmenter.cpp  vad_segmenter.h  webrtc_processor.cpp  webrtc_processor.h  whisper_processor.cpp  whisper_processor.h
src/media/: audio_file_writer.cpp  audio_file_writer.h  flac_writer.cpp  flac_writer.h  wav_writer.cpp  wav_writer.h
src/python/: bindings.cpp
src/utils/: audio_converter.cpp  audio_converter.h  logger.cpp  logger.h  ring_buffer.cpp  ring_buffer.h  signal_generator.cpp  signal_generator.h  subtitle_generator.cpp  subtitle_generator.h  word_grouper.cpp  word_grouper.h
tests/: ARCHITECTURE.md  CMakeLists.txt  FILES_CREATED.md  QUICK_START.md  README.md  test_main.cpp
tests/audio/: test_audio_capture_example.cpp
tests/fixtures/: audio_test_fixture.h
tests/integration/: test_audio_pipeline.cpp
tests/mocks/: mock_audio_device.h  mock_file_system.h
tests/unit/: test_audio_capture.cpp  test_audio_converter.cpp  test_audio_file_writer.cpp  test_audio_mixer.cpp  test_audio_processor.cpp  test_diarizer.cpp  test_flac_writer.cpp  test_live_captioner.cpp  test_logger.cpp  test_ring_buffer.cpp  test_rnnoise_processor.cpp  test_signal_generator.cpp  test_subtitle_generator.cpp  test_vad_segmenter.cpp  test_wav_writer.cpp  test_whisper_processor.cpp  test_word_grouper.cpp
tests/utils/: test_architecture_example.cpp  test_helpers.h  test_signal_generator.h
