[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "ffvoice"
version = "0.8.3"
description = "High-performance offline speech recognition library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ffvoice-engine contributors"}
]
keywords = [
    "speech-recognition",
    "speech-to-text",
    "asr",
    "whisper",
    "speaker-diarization",
    "live-captioning",
    "voice-activity-detection",
    "noise-reduction",
    "rnnoise",
    "offline-transcription",
    "real-time-audio",
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "ai-agent",
    "claude"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    # numpy is required by the C++ bindings: transcribe_buffer(),
    # RNNoise.process(), VADSegmenter.process_frame(), AudioMixer.mix_block(),
    # RingBuffer.push_bulk() / pop_bulk(), and AudioCapture.start() all
    # accept or return NumPy arrays.
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/chicogong/ffvoice-engine"
"Bug Reports" = "https://github.com/chicogong/ffvoice-engine/issues"
"Source" = "https://github.com/chicogong/ffvoice-engine"

[project.optional-dependencies]
mcp = [
    "mcp>=1.2.0,<2.0",
    "numpy>=1.20",
]
diarization = [
    # sherpa-onnx ships all-platform wheels with ONNX Runtime bundled, so
    # speaker diarization works from a plain `pip install` (no source build).
    # soundfile is used by _diarization_pipeline._default_load_audio.
    "sherpa-onnx>=1.12",
    "soundfile>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "mcp>=1.2.0,<2.0",
]

[project.scripts]
ffvoice-mcp = "ffvoice.mcp:main"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
